utils functions with tests completed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "NC_news_api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Building a news API",
   "main": "listen.js",
   "scripts": {
     "setup-dbs": "psql -f db/setup.sql",
